# driftbase

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  Dockerfile.agent  Dockerfile.controlplane  Dockerfile.edge  Dockerfile.web  PLAN_ZEDIZ.md  README.md  docker-compose.yml  justfile
.github/workflows/: agent-image.yml  ci.yml  controlplane-image.yml  deploy.yml  release.yml  web-image.yml
crates/agent/: Cargo.toml
crates/agent/src/: build.rs  caddy.rs  client.rs  docker.rs  executor.rs  main.rs  self_update.rs
crates/common/: Cargo.toml
crates/common/src/: id.rs  lib.rs  telemetry.rs
crates/controlplane/: Cargo.toml
crates/controlplane/migrations/: 0002_credentials_and_ssh_keys.sql  0003_projects_services_deployments.sql  0004_agent_protocol_and_caps.sql  0005_drop_local_docker_nodes.sql  0006_scheduler_pause.sql  0013_user_approval.sql
crates/controlplane/src/: agent_updates.rs  (+8 more)
crates/edge/: Cargo.toml
crates/edge/src/: caddy.rs  client.rs  main.rs  private_network.rs
crates/hetzner/: Cargo.toml
crates/migration/: Cargo.toml
crates/migration/migrations/: initial_schema.sql  m20260513_000002_managed_runtime.rs  m20260513_000003_github_app_builds.rs  m20260513_000004_repair_github_app_builds.rs  m20260513_000005_build_first_nodes.rs  m20260513_000006_global_edge_proxy.rs
crates/migration/src/: lib.rs  main.rs  migration.rs
crates/proto/: Cargo.toml
docker/: agent.Dockerfile  controlplane.Dockerfile  edge.Dockerfile
web/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: main.tsx
(+84 files in other folders)
