[package]
name = "zediz-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "zediz-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
bollard.workspace = true
zediz-common.workspace = true
zediz-proto.workspace = true
